--- a/package.json
+++ b/package.json
@@ -2,5 +2,16 @@
   "dependencies": {
     "moment": "^2.30.1",
     "prompt-sync": "^4.2.0"
-  }
+  },
+  "name": "projetobackend",
+  "version": "1.0.0",
+  "type":"module",
+  "main": "datas.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
